# egame

./: .clang-format  .gitignore  .gitmodules  AssetYAMLDocs.md  CMakeLists.txt  MakeGCH.sh  MakeRelGCH.sh  PrepareBuild.sh  PrepareWindowsBuild.sh  README.md  index.html
Assets/: DevFont.fnt  DevFont.fnt.h  DevFont.png.h
Assets/SandboxAssets/: Main.vs.glsl
Assets/SandboxAssets/.AssetCache/: Main.fs.glsl.eab  Main.vs.glsl.eab
CMake/: FindGLSLang.cmake
Docs/: ParticleEmitterYAML.html  Style.css
Inc/: Common.hpp
Src/AssetGen/: FontGenerator.cpp  Init.cpp  OBJModelGenerator.cpp  OGGVorbisGenerator.cpp  ParticleEmitterGenerator.cpp  STB.cpp  ShaderGenerator.cpp  ShaderResource.cpp  ShaderResource.hpp  ShaderToWGSL.cpp  Texture2DArrayGenerator.cpp  Texture2DGenerator.cpp  Texture2DWriter.cpp  Texture2DWriter.hpp
Src/AssetGen/GLTF/: GLTFAnimation.cpp  GLTFAnimation.hpp  GLTFData.cpp  GLTFData.hpp  GLTFModelGenerator.cpp  GLTFSkeleton.cpp  GLTFSkeleton.hpp
Src/AssetMan/: ANSIColors.hpp  InfoOutput.cpp  InfoOutput.hpp  Main.cpp  ParseArguments.cpp  ParseArguments.hpp
Src/EGame/: AABB.cpp  AABB.hpp  API.hpp  Assert.cpp  Assert.hpp  BitsetUtils.hpp  Clipping.cpp  Clipping.hpp  Collision.cpp  Collision.hpp  CollisionMesh.cpp  CollisionMesh.hpp  Color.cpp  Color.hpp  Compression.cpp  Compression.hpp  Console.cpp  Console.hpp  ConsoleCommands.cpp  ConsoleCommands.hpp  Core.cpp  Core.hpp  CoreSDL.cpp  CoreWeb.cpp  EG.hpp  Event.cpp  Event.hpp  FlyCamera.cpp  FlyCamera.hpp  Frustum.cpp  Frustum.hpp  GameController.cpp  GameController.hpp  GizmoGeometry.cpp  Hash.cpp  Hash.hpp  IOUtils.cpp  IOUtils.hpp  InputState.cpp  InputState.hpp  (+30 more)
Src/EGame/Alloc/: DirectAllocator.hpp  LinearAllocator.cpp  LinearAllocator.hpp  ObjectPool.hpp  PoolAllocator.cpp  PoolAllocator.hpp
Src/EGame/Assets/: Asset.cpp  Asset.hpp  AssetFormat.hpp  AssetGenerator.cpp  AssetGenerator.hpp  AssetLoad.cpp  AssetLoad.hpp  AssetManager.cpp  AssetManager.hpp  AudioClipAsset.cpp  AudioClipAsset.hpp  DefaultAssetGenerator.cpp  DefaultAssetGenerator.hpp  EAPFile.cpp  EAPFile.hpp  ModelAsset.cpp  ModelAsset.hpp  ModelAssset.cpp  ShaderModule.cpp  ShaderModule.hpp  SpriteFontLoader.cpp  SpriteFontLoader.hpp  Texture2DArrayLoader.cpp  Texture2DArrayLoader.hpp  Texture2DLoader.cpp  Texture2DLoader.hpp  WebAssetDownload.cpp  WebAssetDownload.hpp  YAMLUtils.cpp  YAMLUtils.hpp
Src/EGame/Audio/: AudioClip.cpp  AudioClip.hpp  AudioPlayer.cpp  AudioPlayer.hpp  OpenALLoader.cpp  OpenALLoader.hpp
Src/EGame/Entities/: Entity.hpp  EntityComponent.cpp  EntityComponent.hpp  EntityManager.hpp
Src/EGame/Entity/: ComponentAllocator.cpp  ComponentAllocator.hpp  ECInvoke.hpp  ECModel.cpp  ECModel.hpp  ECParticleSystem.cpp  ECParticleSystem.hpp  ECTransform.cpp  ECTransform.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EntitySet.cpp  EntitySet.hpp  EntitySignature.cpp  EntitySignature.hpp  IEntitySerializer.hpp  Message.cpp  Message.hpp
Src/EGame/Geometry/: AABB.cpp  AABB.hpp  Clipping.cpp  Clipping.hpp  Collision.cpp  Collision.hpp  CollisionMesh.cpp  CollisionMesh.hpp  Frustum.cpp  Frustum.hpp  Plane.cpp  Plane.hpp  Ray.cpp  Ray.hpp  Rectangle.cpp  Rectangle.hpp  Sphere.cpp  Sphere.hpp
Src/EGame/Gizmo/: GizmoCommon.cpp  GizmoCommon.hpp  GizmoGeometry.cpp  RotationGizmo.cpp  RotationGizmo.hpp  TranslationGizmo.cpp  TranslationGizmo.hpp
Src/EGame/Graphics/: Abstraction.cpp  Abstraction.hpp  AbstractionCallbacks.inl  AbstractionHL.cpp  AbstractionHL.hpp  BloomRenderer.cpp  BloomRenderer.hpp  DescriptorSetLayoutCache.cpp  DescriptorSetLayoutCache.hpp  DescriptorSetWrapper.cpp  DescriptorSetWrapper.hpp  FontAtlas.cpp  FontAtlas.hpp  Format.cpp  Format.hpp  FramebufferLazyPipeline.cpp  FramebufferLazyPipeline.hpp  FullscreenShader.cpp  FullscreenShader.hpp  Graphics.cpp  Graphics.hpp  GraphicsLoadContext.cpp  GraphicsLoadContext.hpp  IMaterial.hpp  ImageLoader.cpp  ImageLoader.hpp  ImageWriter.cpp  ImageWriter.hpp  LoadingImage.cpp  LoadingScreen.hpp  MeshBatch.cpp  MeshBatch.hpp  MeshBatchOrdered.cpp  MeshBatchOrdered.hpp  Model.cpp  Model.hpp  ModelVertexFormat.cpp  ModelVertexFormat.hpp  NormalTangentGen.hpp  PerspectiveProjection.cpp  (+17 more)
Src/EGame/Graphics/Animation/: Animation.cpp  Animation.hpp  AnimationDriver.cpp  AnimationDriver.hpp  BoneMatrixBuffer.cpp  BoneMatrixBuffer.hpp  KeyFrame.hpp  KeyFrameList.hpp  Skeleton.cpp  Skeleton.hpp  TRSTransform.cpp  TRSTransform.hpp
Src/EGame/Graphics/Metal/: CAMetalLayer.hpp  CAMetalLayer.mm  MetalBuffer.cpp  MetalBuffer.hpp  MetalCommandContext.cpp  MetalCommandContext.hpp  MetalDescriptorSet.cpp  MetalDraw.cpp  MetalMain.cpp  MetalMain.hpp  MetalPipeline.cpp  MetalPipeline.hpp  MetalPipelineCompute.cpp  MetalPipelineGraphics.cpp  MetalTexture.cpp  (+6 more)
Src/EGame/Platform/: Debug.cpp  Debug.hpp  DebugLinux.cpp  DebugPosix.cpp  DynamicLibrary.hpp  DynamicLibraryLinux.cpp  DynamicLibraryPosix.cpp  DynamicLibraryWindows.cpp  FileSystem.cpp  FileSystem.hpp  FileSystemLinux.cpp  FileSystemMacOS.mm  FileSystemPosix.cpp  FileSystemWeb.cpp  FileSystemWindows.cpp  FontConfig.hpp  FontConfigLinux.cpp  FontConfigMacOS.mm  FontConfigNone.cpp  FontConfigWeb.cpp  FontConfigWin32.cpp
Src/EGame/Profiling/: Memory.cpp  Memory.hpp  Profiler.cpp  Profiler.hpp  ProfilerPane.cpp  ProfilerPane.hpp  ProfilingResults.cpp  ProfilingResults.hpp
Src/EGameImGui/: EGameImGui.cpp  EGameImGui.hpp  ImGuiConfig.hpp
Src/Sandbox/: CompileShaders.sh  Main.cpp  Main.frag  Main.frag.h  Main.vert  Main.vert.h
Src/Sandbox/SandboxAssets/: Assets.yaml  Main.vs.glsl
Src/Shaders/: BRDFIntegration.cs.glsl  Bloom.vs.glsl  BloomBlur.cs.glsl  BloomBlurX.fs.glsl  BloomBlurY.fs.glsl  BloomBrightPass.cs.glsl  BloomBrightPass.fs.glsl  BloomUpscale.cs.glsl  Fullscreen_TCFlip.vs.glsl  Fullscreen_TCNoFlip.vs.glsl  Fullscreen_TCNone.vs.glsl  Gizmo.fs.glsl  Gizmo.vs.glsl  IBLCommon.glh  IBLConvolve.glh  ImGui.fs.glsl  ImGui.vs.glsl  IrradianceMapGenerator.cs.glsl  Loading.vs.glsl  Makefile  SPFMapGenerator.cs.glsl  Sprite.fs.glsl  Sprite.vs.glsl
Src/Shaders/Inc/: Deferred.glh  EGame.glh
Test/: TestECS.cpp
(+123 files in other folders)
